# fetchpp

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  install.sh
src/: color.hpp  fetcher.cpp  fetcher.hpp  logoLoader.hpp  main.cpp
src/assets/: assets.hpp  logos-builtin.hpp
